[package]
name = "mork-task"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mork-hal = { path = "../mork-hal" }
mork-common = { path = "../../mork-common" }
mork-capability = { path = "../mork-capability" }
log = "0.4"
